add openstreetmap geometries sync